Fixed overflow issue - temporarily

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -443,6 +443,10 @@ html {
     .fb-post {
         padding-bottom: 20px;
     }
+    .review-container {
+        padding: 0;
+        overflow: hidden;
+    }
     .landing {
         height: 400px;
     }
